--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-/conf
-/logs
+/*
+!/app/
+!/app/public/
+!/app/public/wp-content/
+!/app/public/wp-content/plugins/
+!/app/public/wp-content/plugins/Sentio Addons/
+!/app/public/wp-content/plugins/Sentio Addons/**/*
